-
Bug
-
Resolution: Fixed
-
Trivial
-
None
-
3
-
9757
Misleading error message from kiblnd_check_txs_locked(). The value reported in the error message is how many seconds we exceeded the deadline by. What I (and everyone else here) would have expected before reading the source is that the value would be the total time outstanding before timing out the RDMA.
LNetError: 3073:0:(o2iblnd_cb.c:2988:kiblnd_check_txs_locked()) Timed out tx: active_txs, 10 seconds
- is related to
-
LU-13675 LNetError: 14769:0:(o2iblnd.h:1003:kiblnd_queue2str()) LBUG
-
- Resolved
-