LU-1742 o2iblnd: Fix up the 'Timed out tx' message

The message printed for a timed out transaction in the o2iblnd code was
modified to provide more useful information to the end user. This should
(hopefully) give more insight into the problem, while simultaneously
making the message more "human friendly".

Signed-off-by: Prakash Surya <surya1@llnl.gov>
Change-Id: Ied40db9ce5483bc8929116c6d720f2a8e078c0f9